# sparkyard

./: .gitignore  CHANGELOG.md  CLAUDE.md  CREDITS.md  LICENSE  Makefile  README.md  docker-compose.yml  models.example.yaml  secrets.env.example  settings.example.yaml
llama-cpp/: llama-cpp.Dockerfile
llama-swap/: llama-swap.Dockerfile
llama-swap/scripts/: launch.py
scripts/: bench.sh  gen-secrets.sh  lib.sh  offer-global-install.sh
scripts/tests/: test_bench.sh  test_gen_secrets.sh  test_lib.sh  test_offer_global_install.sh
tools/: pyproject.toml  requirements.txt
tools/sparkyard/: __init__.py  addmodel.py  cli.py  doctor.py  download.py  introspect.py  model.py  notes.py  ops.py  placeholders.py  render.py  settings.py  update.py  validate.py  vllm_node.py  vllm_pin.py
tools/sparkyard/templates/: compose-env.j2  litellm.config.yaml.j2  llama-swap.config.yaml.j2
tools/tests/: test_addmodel.py  test_cli.py  test_cli_entrypoint.py  test_cli_help.py  test_doctor.py  test_download.py  test_introspect.py  test_launch.py  test_model.py  test_notes.py  test_ops.py  test_placeholders.py  test_render.py  test_settings.py  test_update.py  test_validate.py  test_vllm_node.py  test_vllm_pin.py
tools/tests/fixtures/: models.yaml  settings.local.yaml
tools/tests/fixtures/expected/: compose.env  llama-swap.vllm-basic.yaml
vllm/: VLLM_NODE_PROVENANCE.md
